force-app/main/default/objects/Player__c/Player__c.object-meta.xml
<CustomObject>
    <description>A Slack user playing trivia.</description>
    <label>Player</label>
    <nameField>
        <label>Player Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Players</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>