force-app/main/default/objects/Player__c/fields/Accuracy__c.field-meta.xml
<CustomField>
    <fullName>Accuracy__c</fullName>
    <label>Accuracy</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>