force-app/main/default/objects/Player__c/fields/Current_Streak_Days__c.field-meta.xml
<CustomField>
    <fullName>Current_Streak_Days__c</fullName>
    <label>Current Streak Days</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>