force-app/main/default/objects/Player__c/fields/Google_Email__c.field-meta.xml
<CustomField>
    <fullName>Google_Email__c</fullName>
    <label>Google Email</label>
    <type>Email</type>
</CustomField>