force-app/main/default/objects/Player__c/fields/Google_Name__c.field-meta.xml
<CustomField>
    <fullName>Google_Name__c</fullName>
    <label>Google Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>