force-app/main/default/objects/Player__c/fields/Google_Picture_URL__c.field-meta.xml
<CustomField>
    <fullName>Google_Picture_URL__c</fullName>
    <label>Google Picture URL</label>
    <type>Url</type>
</CustomField>