force-app/main/default/objects/Player__c/fields/Google_Sub__c.field-meta.xml
<CustomField>
    <fullName>Google_Sub__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Google Sub</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>