force-app/main/default/objects/Player__c/fields/Longest_Streak_Days__c.field-meta.xml
<CustomField>
    <fullName>Longest_Streak_Days__c</fullName>
    <label>Longest Streak Days</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>