force-app/main/default/objects/Player__c/fields/Mapped_Contact__c.field-meta.xml
<CustomField>
    <fullName>Mapped_Contact__c</fullName>
    <label>Mapped Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Trivia_Players</relationshipName>
    <relationshipLabel>Mapped Contact</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>