force-app/main/default/objects/Player__c/fields/Notifications_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Notifications_Opt_In__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Notifications Opt In</label>
    <type>Checkbox</type>
</CustomField>