force-app/main/default/objects/Player__c/fields/Salesforce_User__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_User__c</fullName>
    <label>Salesforce User</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Trivia_Player</relationshipName>
    <relationshipLabel>Salesforce User</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>