force-app/main/default/objects/Player__c/fields/Slack_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Slack_User_Id__c</fullName>
    <label>Slack User Id</label>
    <type>Text</type>
    <externalId>true</externalId>
    <length>40</length>
    <length>40</length>
</CustomField>