force-app/main/default/objects/Player__c/fields/Total_Games__c.field-meta.xml
<CustomField>
    <fullName>Total_Games__c</fullName>
    <label>Total Games</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>