force-app/main/default/objects/Player__c/fields/Total_Points__c.field-meta.xml
<CustomField>
    <fullName>Total_Points__c</fullName>
    <label>Total Points</label>
    <type>Number</type>
    <precision>12</precision>
    <scale>0</scale>
</CustomField>