force-app/main/default/objects/Player__c/fields/Web_Last_Login_At__c.field-meta.xml
<CustomField>
    <fullName>Web_Last_Login_At__c</fullName>
    <label>Web Last Login At</label>
    <type>DateTime</type>
</CustomField>